// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`game.moveByShorthand from each position deck 1`] = `
[
  {
    "location": {
      "data": [
        0,
      ],
      "fixture": "deck",
    },
    "rank": "10",
    "suit": "spades",
  },
  {
    "location": {
      "data": [
        1,
      ],
      "fixture": "deck",
    },
    "rank": "7",
    "suit": "clubs",
  },
  {
    "location": {
      "data": [
        2,
      ],
      "fixture": "deck",
    },
    "rank": "ace",
    "suit": "diamonds",
  },
  {
    "location": {
      "data": [
        3,
      ],
      "fixture": "deck",
    },
    "rank": "9",
    "suit": "spades",
  },
  {
    "location": {
      "data": [
        4,
      ],
      "fixture": "deck",
    },
    "rank": "jack",
    "suit": "spades",
  },
  {
    "location": {
      "data": [
        5,
      ],
      "fixture": "deck",
    },
    "rank": "queen",
    "suit": "clubs",
  },
  {
    "location": {
      "data": [
        6,
      ],
      "fixture": "deck",
    },
    "rank": "6",
    "suit": "clubs",
  },
]
`;

exports[`game.moveByShorthand to each position deck empty 1`] = `
[
  {
    "location": {
      "data": [
        0,
      ],
      "fixture": "deck",
    },
    "rank": "6",
    "suit": "diamonds",
  },
]
`;

exports[`game.moveByShorthand to each position deck not empty 1`] = `
[
  {
    "location": {
      "data": [
        0,
      ],
      "fixture": "deck",
    },
    "rank": "10",
    "suit": "spades",
  },
  {
    "location": {
      "data": [
        1,
      ],
      "fixture": "deck",
    },
    "rank": "7",
    "suit": "clubs",
  },
  {
    "location": {
      "data": [
        2,
      ],
      "fixture": "deck",
    },
    "rank": "ace",
    "suit": "diamonds",
  },
  {
    "location": {
      "data": [
        3,
      ],
      "fixture": "deck",
    },
    "rank": "9",
    "suit": "spades",
  },
  {
    "location": {
      "data": [
        4,
      ],
      "fixture": "deck",
    },
    "rank": "jack",
    "suit": "spades",
  },
  {
    "location": {
      "data": [
        5,
      ],
      "fixture": "deck",
    },
    "rank": "queen",
    "suit": "clubs",
  },
  {
    "location": {
      "data": [
        6,
      ],
      "fixture": "deck",
    },
    "rank": "6",
    "suit": "clubs",
  },
  {
    "location": {
      "data": [
        7,
      ],
      "fixture": "deck",
    },
    "rank": "6",
    "suit": "hearts",
  },
  {
    "location": {
      "data": [
        8,
      ],
      "fixture": "deck",
    },
    "rank": "6",
    "suit": "diamonds",
  },
]
`;
